--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pinia-logger": "^1.3.12",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-webfont-dl": "^3.7.6",
     "vue-tsc": "^1.8.5"
   }
 }
