--- a/package.json
+++ b/package.json
@@ -17,16 +17,27 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^1.0.0-beta.27",
     "@types/node": "^20.7.1",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "eslint": "^8.50.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint": "^8.51.0",
+    "lint-staged": "^15.0.0",
     "pinia-logger": "^1.3.12",
+    "postcss": "^8.4.31",
+    "postcss-html": "^1.5.0",
+    "simple-git-hooks": "^2.9.0",
+    "stylelint": "^15.10.3",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^34.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-webfont-dl": "^3.7.6",
     "vue-tsc": "^1.8.5"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
