--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,30 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "jsx": "preserve",
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "useDefineForClassFields": true,
+
+    "baseUrl": "./",
     "module": "ESNext",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "paths": {
+      "@tf-app/*": ["./src/*"]
+    },
     "resolveJsonModule": true,
-    "noEmit": true,
-    "isolatedModules": true,
+    "allowImportingTsExtensions": true,
 
     /* Linting */
     "strict": true,
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "skipLibCheck": true,
-
-    "baseUrl": "./",
-    "paths": {
-      "@tf-app/*": ["./src/*"],
-    }
+    "noEmit": true,
+    "isolatedModules": true,
+    "skipLibCheck": true
   },
   "references": [{ "path": "./tsconfig.node.json" }],
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "typings/**/*d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "typings/**/*d.ts"]
 }
