--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^20.7.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.51.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "lint-staged": "^15.0.0",
     "pinia-logger": "^1.3.12",
     "postcss": "^8.4.31",
