added pwa configuration

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_UNSPLASH_API_URL=https://api.unsplash.com
 VITE_UNSPLASH_CLIENT_ID=_KrzP7Yj9ObontNacjoQht00agosJQygX9l-ctvlLbE
+VITE_BASE_URL=/
