--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prepare": "simple-git-hooks",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "generate-pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
     "pinia": "^2.1.6",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^1.0.0-beta.27",
     "@types/node": "^20.7.1",
+    "@vite-pwa/assets-generator": "^0.0.10",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.51.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
@@ -34,6 +36,8 @@
     "stylelint-config-standard": "^34.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-html-config": "^1.0.11",
+    "vite-plugin-pwa": "^0.16.5",
     "vite-plugin-webfont-dl": "^3.7.6",
     "vue-tsc": "^1.8.5"
   },
