--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "generate-pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
+    "focus-trap": "^7.5.4",
     "mitt": "^3.0.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
