--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,7 @@
   "extends": ["stylelint-config-standard", "stylelint-config-recommended-vue"],
   "rules": {
     "indentation": 2,
-    "max-empty-lines": 1
+    "max-empty-lines": 1,
+    "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$"
   }
 }
