--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint:fix": "eslint . --fix",
     "prepare": "simple-git-hooks",
     "lint-staged": "lint-staged",
-    "generate-pwa-assets": "pwa-assets-generator"
+    "generate-pwa-assets": "pwa-assets-generator",
+    "story:dev": "histoire dev",
+    "story:build": "histoire build",
+    "story:preview": "histoire preview"
   },
   "dependencies": {
     "focus-trap": "^7.5.4",
@@ -23,11 +26,13 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^1.0.0-beta.27",
+    "@histoire/plugin-vue": "^0.17.4",
     "@types/node": "^20.7.1",
     "@vite-pwa/assets-generator": "^0.0.10",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.51.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "histoire": "^0.17.4",
     "lint-staged": "^15.0.0",
     "pinia-logger": "^1.3.12",
     "postcss": "^8.4.31",
