--- a/,github/workflows/deploy-histoire.yml
+++ b/,github/workflows/deploy-histoire.yml
@@ -2,7 +2,8 @@ name: Deploy static content to Pages
 
 on:
   push:
-    branches: [feat/histoire]
+    branches:
+      - main
 
   workflow_dispatch:
 
