--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vueuse/core": "^10.5.0",
     "focus-trap": "^7.5.4",
     "mitt": "^3.0.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-inline-svg": "^3.1.2",
@@ -29,6 +30,7 @@
     "@antfu/eslint-config": "^1.0.0-beta.27",
     "@histoire/plugin-vue": "^0.17.4",
     "@types/node": "^20.7.1",
+    "@types/nprogress": "^0.2.3",
     "@vite-pwa/assets-generator": "^0.0.10",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.51.0",
