--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.5.0",
+    "@vueuse/router": "^10.7.2",
     "focus-trap": "^7.5.4",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
