--- a/package.json
+++ b/package.json
@@ -17,40 +17,43 @@
     "story:preview": "histoire preview"
   },
   "dependencies": {
-    "@vueuse/core": "^10.5.0",
+    "@vueuse/core": "^10.7.2",
     "@vueuse/router": "^10.7.2",
     "focus-trap": "^7.5.4",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.6",
+    "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-inline-svg": "^3.1.2",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^1.0.0-beta.27",
-    "@histoire/plugin-vue": "^0.17.4",
-    "@types/node": "^20.7.1",
+    "@antfu/eslint-config": "^1.2.1",
+    "@histoire/plugin-vue": "^0.17.11",
+    "@types/node": "^20.11.19",
     "@types/nprogress": "^0.2.3",
     "@vite-pwa/assets-generator": "^0.0.10",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "eslint": "^8.51.0",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "eslint": "^8.56.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "histoire": "^0.17.4",
-    "lint-staged": "^15.0.0",
+    "histoire": "^0.17.9",
+    "lint-staged": "^15.2.2",
     "pinia-logger": "^1.3.12",
-    "postcss": "^8.4.31",
-    "postcss-html": "^1.5.0",
+    "postcss": "^8.4.35",
+    "postcss-html": "^1.6.0",
     "simple-git-hooks": "^2.9.0",
-    "stylelint": "^15.10.3",
+    "stylelint": "^15.11.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^34.0.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "typescript": "^5.3.3",
+    "vite": "^4.5.2",
     "vite-plugin-html-config": "^1.0.11",
-    "vite-plugin-pwa": "^0.16.5",
-    "vite-plugin-webfont-dl": "^3.7.6",
-    "vue-tsc": "^1.8.5"
+    "vite-plugin-pwa": "^0.16.7",
+    "vite-plugin-webfont-dl": "^3.9.1",
+    "vue-tsc": "^1.8.27"
+  },
+  "overrides": {
+    "stylelint": "$stylelint"
   },
   "simple-git-hooks": {
     "pre-commit": "npm run lint-staged"
