--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["Vue.volar", "Vue.vscode-typescript-vue-plugin", "stylelint.vscode-stylelint"]
+  "recommendations": ["Vue.vscode-typescript-vue-plugin", "stylelint.vscode-stylelint"]
 }
