--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^34.0.0",
     "typescript": "^5.4.3",
+    "unplugin-icons": "^0.18.5",
     "vite": "^4.5.3",
     "vite-plugin-html-config": "^1.0.11",
     "vite-plugin-pwa": "^0.16.7",
