--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "@tf-app/*": ["./src/*"]
     },
     "resolveJsonModule": true,
+    "types": ["unplugin-icons/types/vue"],
     "allowImportingTsExtensions": true,
 
     /* Linting */
