--- a/.github/workflows/deploy-histoire.yaml
+++ b/.github/workflows/deploy-histoire.yaml
@@ -1,4 +1,4 @@
-name: Deploy static content to Pages
+name: Deploy Histoire to GitHub Pages
 
 on:
   push:
@@ -27,9 +27,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
       - name: Install dependencies
@@ -37,11 +37,11 @@ jobs:
       - name: Build
         run: npm run story:build
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v4
         with:
           path: .histoire/dist
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v4
