--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist-ssr
 *.local
 dev-dist
 .histoire
+docs
 
 # Editor directories and files
 .vscode/*
@@ -24,3 +25,4 @@ dev-dist
 *.njsproj
 *.sln
 *.sw?
+
