--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "generate-pwa-assets": "pwa-assets-generator",
     "story:dev": "histoire dev",
     "story:build": "histoire build",
-    "story:preview": "histoire preview"
+    "story:preview": "histoire preview",
+    "upgrade": "npx npm-check-updates -u && npm install"
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
@@ -40,6 +41,7 @@
     "@vite-pwa/assets-generator": "^0.0.10",
     "@vitejs/plugin-vue": "^4.6.2",
     "eslint": "^8.57.0",
+    "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "histoire": "^0.17.14",
     "lint-staged": "^15.2.2",
