--- a/.github/workflows/deploy-histoire.yaml
+++ b/.github/workflows/deploy-histoire.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - src/shared/ui/**
+      - histoire.config.ts
 
   workflow_dispatch:
 
