--- a/.github/workflows/deploy-histoire.yaml
+++ b/.github/workflows/deploy-histoire.yaml
@@ -7,6 +7,8 @@ on:
     paths:
       - src/shared/ui/**
       - histoire.config.ts
+      - src/histoire.setup.ts
+      - src/app/index.css
 
   workflow_dispatch:
 
