--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "story:build": "histoire build",
     "story:preview": "histoire preview",
     "upgrade": "npx npm-check-updates -u && npm install",
-    "visualize": "npx vite-bundle-visualizer"
+    "visualize": "npx vite-bundle-visualizer",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
@@ -41,9 +43,11 @@
     "@types/nprogress": "^0.2.3",
     "@vite-pwa/assets-generator": "^0.2.4",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/test-utils": "^2.4.5",
     "eslint": "^9.1.1",
     "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "happy-dom": "^14.7.1",
     "histoire": "^0.17.17",
     "lint-staged": "^15.2.2",
     "pinia-logger": "^1.3.13",
@@ -59,6 +63,7 @@
     "vite-plugin-html-config": "^1.0.11",
     "vite-plugin-pwa": "^0.20.0",
     "vite-plugin-webfont-dl": "^3.9.4",
+    "vitest": "^1.6.0",
     "vue-tsc": "^2.0.16"
   },
   "overrides": {
