--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/nprogress": "^0.2.3",
     "@vite-pwa/assets-generator": "^0.2.4",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/coverage-v8": "^1.6.0",
     "@vue/test-utils": "^2.4.5",
     "eslint": "^9.1.1",
     "eslint-plugin-format": "^0.1.1",
