--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.16.1",
     "@histoire/plugin-vue": "^0.17.17",
+    "@pinia/testing": "^0.1.3",
     "@types/node": "^20.12.7",
     "@types/nprogress": "^0.2.3",
     "@vite-pwa/assets-generator": "^0.2.4",
