--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "typescript": "^5.4.5",
     "unplugin-icons": "^0.19.0",
     "vite": "^5.2.11",
-    "vite-plugin-html-config": "^1.0.11",
+    "vite-plugin-html": "^3.2.2",
     "vite-plugin-pwa": "^0.20.0",
     "vite-plugin-webfont-dl": "^3.9.4",
     "vitest": "^1.6.0",
