--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "upgrade": "npx npm-check-updates -u && npm install",
     "visualize": "npx vite-bundle-visualizer",
     "test": "vitest",
+    "test:e2e": "playwright test",
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
@@ -40,6 +41,7 @@
     "@antfu/eslint-config": "^2.18.0",
     "@histoire/plugin-vue": "^0.17.17",
     "@pinia/testing": "^0.1.3",
+    "@playwright/test": "^1.44.1",
     "@types/node": "^20.12.12",
     "@types/nprogress": "^0.2.3",
     "@vite-pwa/assets-generator": "^0.2.4",
