--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,15 @@ jobs:
       - name: Run unit tests
         run: npm run test:unit
 
+      - name: Build App for E2E tests
+        run: npm run build
+
       - name: Setup Playwright
         run: npx playwright install --with-deps
 
       - name: Run e2e Playwright tests
         env:
-          CI: 1,
+          CI: 1
           BASE_URL: http://localhost:3000
         run: npm run test:e2e
 
