chore(ci): added debug env to Playwright tests

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,7 @@ jobs:
         env:
           CI: 1
           BASE_URL: http://localhost:3000
+          DEBUG: pw:browser
         run: npm run test:e2e
 
       - uses: actions/upload-artifact@v4
