--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,8 @@ jobs:
   e2e-tests:
     name: Run E2E Tests
     runs-on: ubuntu-20.04
+    container:
+      image: mcr.microsoft.com/playwright:v1.44.1-focal
     needs: unit-tests
 
     steps:
@@ -44,14 +46,12 @@ jobs:
       - name: Build App for E2E tests
         run: npm run build
 
-      - name: Setup Playwright
-        run: npx playwright install --with-deps
-
       - name: Run e2e Playwright tests
         env:
           CI: 1
           BASE_URL: http://localhost:3000
           DEBUG: pw:browser
+          HOME: /root
         run: npm run test:e2e
 
       - uses: actions/upload-artifact@v4
