--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,6 @@ jobs:
   e2e-tests:
     name: Run E2E Tests
     runs-on: ubuntu-20.04
-    container:
-      image: mcr.microsoft.com/playwright:v1.44.1-focal
     needs: unit-tests
 
     steps:
@@ -43,6 +41,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Instal Playwright deps
+        run: npx playwright install --with-deps
+
       - name: Build App for E2E tests
         run: npm run build
 
@@ -50,7 +51,7 @@ jobs:
         env:
           CI: 1
           BASE_URL: http://localhost:3000
-          DEBUG: pw:browser
+          DEBUG: pw:browser,pw:api
           HOME: /root
         run: npm run test:e2e
 
