--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,8 +74,6 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_TEAM_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-          UNSPLASH_CLIENT_ID: ${{ secrets.UNSPLASH_CLIENT_ID }}
-          UNSPLASH_API_URL: ${{ secrets.UNSPLASH_API_URL }}
         run: |
           npm install -g vercel
-          vercel --prod --token $VERCEL_TOKEN --env VITE_UNSPLASH_CLIENT_ID=$UNSPLASH_CLIENT_ID --env VITE_UNSPLASH_API_URL=$UNSPLASH_API_URL
+          vercel --prod --token $VERCEL_TOKEN
