--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitest/coverage-v8": "^1.6.0",
     "@vue/test-utils": "^2.4.6",
+    "dotenv": "^16.4.5",
     "eslint": "^9.6.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-simple-import-sort": "^12.1.0",
