--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "^npm@9.0.0",
+  "packageManager": "npm@10.8.3",
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
@@ -27,49 +27,49 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@vueuse/core": "^10.11.0",
-    "@vueuse/router": "^10.11.0",
+    "@vueuse/core": "^11.0.3",
+    "@vueuse/router": "^11.0.3",
     "blurhash": "^2.0.5",
     "focus-trap": "^7.5.4",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.31",
-    "vue-router": "^4.4.0"
+    "pinia": "^2.2.2",
+    "vue": "^3.5.3",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.21.3",
+    "@antfu/eslint-config": "^3.4.1",
     "@histoire/plugin-vue": "^0.17.17",
-    "@pinia/testing": "^0.1.3",
-    "@playwright/test": "^1.45.1",
-    "@types/node": "^20.14.10",
+    "@pinia/testing": "^0.1.5",
+    "@playwright/test": "^1.47.0",
+    "@types/node": "^22.5.4",
     "@types/nprogress": "^0.2.3",
-    "@vite-pwa/assets-generator": "^0.2.4",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@vite-pwa/assets-generator": "^0.2.6",
+    "@vitejs/plugin-vue": "^5.1.3",
+    "@vitest/coverage-v8": "^2.0.5",
     "@vue/test-utils": "^2.4.6",
     "dotenv": "^16.4.5",
-    "eslint": "^9.6.0",
+    "eslint": "^9.10.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "happy-dom": "^14.12.3",
+    "happy-dom": "^15.7.3",
     "histoire": "^0.17.17",
-    "lint-staged": "^15.2.7",
+    "lint-staged": "^15.2.10",
     "pinia-logger": "^1.3.13",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.45",
     "postcss-html": "^1.7.0",
     "simple-git-hooks": "^2.11.1",
-    "stylelint": "^16.6.1",
+    "stylelint": "^16.9.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.1",
-    "typescript": "^5.5.3",
-    "unplugin-icons": "^0.19.0",
-    "vite": "^5.3.3",
+    "typescript": "^5.5.4",
+    "unplugin-icons": "^0.19.3",
+    "vite": "^5.4.3",
     "vite-plugin-html": "^3.2.2",
-    "vite-plugin-pwa": "^0.20.0",
-    "vite-plugin-webfont-dl": "^3.9.4",
-    "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.26"
+    "vite-plugin-pwa": "^0.20.5",
+    "vite-plugin-webfont-dl": "^3.9.5",
+    "vitest": "^2.0.5",
+    "vue-tsc": "^2.1.6"
   },
   "overrides": {
     "stylelint": "$stylelint"
