--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vueuse/core": "^13.6.0",
     "@vueuse/router": "^13.6.0",
     "blurhash": "^2.0.5",
+    "ditox": "^3.0.0",
     "focus-trap": "^7.6.5",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
@@ -38,7 +39,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^5.1.0",
+    "@antfu/eslint-config": "^5.2.0",
     "@histoire/plugin-vue": "^0.17.17",
     "@pinia/testing": "^1.0.2",
     "@playwright/test": "^1.54.2",
@@ -58,12 +59,12 @@
     "postcss": "^8.5.6",
     "postcss-html": "^1.8.0",
     "simple-git-hooks": "^2.13.1",
-    "stylelint": "^16.23.0",
+    "stylelint": "^16.23.1",
     "stylelint-config-recommended-vue": "^1.6.1",
     "stylelint-config-standard": "^39.0.0",
     "typescript": "^5.9.2",
     "unplugin-icons": "^22.2.0",
-    "vite": "^7.0.6",
+    "vite": "^5.4.19",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-pwa": "^1.0.2",
     "vite-plugin-webfont-dl": "^3.11.1",
